# Deta-clean-env

./: .env.example  .gitignore  Dockerfile  LICENSE  PROJECT_DOCUMENTATION.md  README.md  baseline.py  client.py  conftest.py  dashboard.html  demo.py  docker-compose.yml  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
batch_cleaner/: __init__.py
batch_cleaner/ai_module/: advisor.py
batch_cleaner/api/: routes.py
batch_cleaner/cleaning/: engine.py  rules.py
batch_cleaner/config/: cleaning_rules.yaml
batch_cleaner/ingestion/: loader.py
batch_cleaner/profiling/: profiler.py
batch_cleaner/tests/: sample_data.csv  test_cleaning.py
batch_cleaner/utils/: logger.py
batch_cleaner/validation/: validator.py
server/: Dockerfile  __init__.py  app.py  dataset_generator.py  environment.py  graders.py  reward.py
server/templates/: dashboard.html
tests/: test_environment.py  test_graders.py  test_reward.py
